[package]
name = "save-and-execute"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "se"
path = "src/main.rs"

[dependencies]
console = "0.15.7"
dirs = "5.0.1"
rustyline = "12.0.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

[build-dependencies]
winres = "0.1.12"
